fix: If two images were in same row, they were not centered

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -766,4 +766,8 @@ footer {
   .post-content img {
     width:  auto;
   }
+
+  .post-content > p:has(> img) {
+    text-align: center;
+  }
 }
